--- a/themes/rtc/layouts/_default/baseof.html
+++ b/themes/rtc/layouts/_default/baseof.html
@@ -9,6 +9,7 @@
     <meta name="referrer" content="no-referrer-when-downgrade" />
     {{ $style := resources.Get "scss/main.scss" | css.Sass | resources.Minify | resources.Fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
+    <link rel="stylesheet" href="/css/editioncrafter.css">
 
     {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
