--- a/themes/rtc/layouts/partials/nav.html
+++ b/themes/rtc/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <a class="home-link" href="{{ "/" | relURL }}">
-        <img alt="{{ .Site.Title }} project logo" src="/img/home-icon.png" />
+        <img alt="{{ .Site.Title }} project logo" src="/img/home-icon.png" style="width: 10vw;"/>
     </a>
     <input id="mobile-nav-toggle" name="mobile-nav-toggle" tabindex="0" type="checkbox" />
     <label for="mobile-nav-toggle">
